adding error handling

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primarycolor">#5552FF</color>
     <color name="passwordBox">#D9E0FA</color>
+    <color name="correctcolor">#126B12</color>
 </resources>
 
